[package]
name = "neweatskw-rs"
version = "0.1.0"
authors = ["Mark Sherry <mdsherry@gmail.com>"]
edition = "2021"

[dependencies]
csv = "1.0"
serde = { version="1.0", features=["derive"] }
reqwest = "0.11"
clap = { version = "3.1.18", features = ["derive"] }
rusqlite = { version="0.27", features=["chrono"] }
chrono = "0.4"
egg-mode = "0.16"
zip = "0.6"
regex = "1.0"
lazy_static = "1.2"
encoding = "0.2"
tokio = { version="1.0", features=["full"] }
anyhow = "1.0"
once_cell = "1.12.0"
